--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.15.6",
-    "sharp": "^0.33.5",
+    "astro": "^4.15.6"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.9.3",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
   }
